--- a/prog_odroid/basler/x4_detector/Makefile
+++ b/prog_odroid/basler/x4_detector/Makefile
@@ -3,7 +3,7 @@
 
 # The program to build
 NAME   := x4_detector
-SRC_CPP:= Corner.cpp custom_functions.cpp opencv_functions.cpp camera.cpp
+SRC_CPP:= Corner.cpp custom_functions.cpp img_processing.cpp camera.cpp
 SRC	   := $(SRC_CPP) x4_detector.cpp
 OBJ	   := $(SRC:.cpp=.o)
 
@@ -11,14 +11,27 @@ OBJ	   := $(SRC:.cpp=.o)
 PYLON_ROOT ?= /opt/pylon5
 
 # Build tools and flags
-LD         := $(CXX)
-CPPFLAGS   := $(shell $(PYLON_ROOT)/bin/pylon-config --cflags) $(shell pkg-config opencv --cflags)
-CXXFLAGS   := -O2 -std=c++11 #e.g., CXXFLAGS=-g -O0 for debugging
-LDFLAGS    := $(shell $(PYLON_ROOT)/bin/pylon-config --libs-rpath)
-LDLIBS     := $(shell $(PYLON_ROOT)/bin/pylon-config --libs) $(shell pkg-config opencv --libs)
+LD         	:= $(CXX)
+CPPFLAGS   	:= $(shell $(PYLON_ROOT)/bin/pylon-config --cflags) $(shell pkg-config opencv --cflags)
+# for release
+CXXFLAGS	:= -O2 -std=c++11
+# for debugging
+DBGCXXFLAGS	:= -O0 -g -std=c++11
+LDFLAGS    	:= $(shell $(PYLON_ROOT)/bin/pylon-config --libs-rpath)
+LDLIBS     	:= $(shell $(PYLON_ROOT)/bin/pylon-config --libs) $(shell pkg-config opencv --libs)
+
+#DEBUG ?= 1
+#ifeq ($(DEBUG), 1)
+#	CXXFLAGS = DBGCXXFLAGS
+#else
+#	CXXFLAGS = RLSCXXFLAGS
+#endif
 
 # Rules for building
 all: $(NAME)
+
+debug: CXXFLAGS := $(DBGCXXFLAGS)
+debug: $(NAME)
 
 $(NAME): $(OBJ)
 	$(LD) $(CPPFLAGS) $(LDFLAGS) $(CXXFLAGS) -o $@ $^ $(LDLIBS)
