--- a/prog_gumstix/test_gumstix/.gitignore
+++ b/prog_gumstix/test_gumstix/.gitignore
@@ -1,6 +1,7 @@
 # Ignore all excepts specified files
 *
 !.gitignore
+!AccCalib_Transformation_X4morf_Robot.mat
 !COM_test_gumstix.mdl
 !init_test_gumstix.m
 !RobotParameters.m
