--- a/prog_odroid/project_detector/Makefile
+++ b/prog_odroid/project_detector/Makefile
@@ -11,7 +11,7 @@ SERIAL_DIR := $(GIT_REPO)/prog_odroid/libs/lib_serial_com
 
 # The program to build	
 NAME   := project_detector
-LIB_CPP:= $(wildcard $(CAMERA_DIR)/*.cpp) $(wildcard $(DETECTOR_DIR)/*.cpp) $(wildcard $(SERIAL_DIR)/*.cpp) $(wildcard $(SERIAL_DIR)/*.c) detection.cpp serial_com.cpp
+LIB_CPP:= $(wildcard $(CAMERA_DIR)/*.cpp) $(wildcard $(DETECTOR_DIR)/*.cpp) $(wildcard $(SERIAL_DIR)/*.cpp) $(wildcard $(SERIAL_DIR)/*.c) detection.cpp serial_com.cpp class_def.cpp
 SRC	   := $(LIB_CPP) project_detector.cpp
 OBJ	   := $(SRC:.cpp=.o)
 OBJ    := $(OBJ:.c=.o)
@@ -27,7 +27,7 @@ CXXFLAGS	:= -O2 -std=c++11
 # for debugging
 DBGCXXFLAGS	:= -O0 -g -std=c++11
 LDFLAGS    	:= $(shell $(PYLON_ROOT)/bin/pylon-config --libs-rpath)
-LDLIBS     	:= $(shell $(PYLON_ROOT)/bin/pylon-config --libs) $(shell pkg-config opencv --libs) -I$(CAMERA_DIR) -I$(DETECTOR_DIR) -I$(SERIAL_DIR)
+LDLIBS     	:= $(shell $(PYLON_ROOT)/bin/pylon-config --libs) $(shell pkg-config opencv --libs) -I$(CAMERA_DIR) -I$(DETECTOR_DIR) -I$(SERIAL_DIR) -lpthread -lrt
 
 # Rules for building
 all: $(NAME)
